[project]
name = "ahrefs-python"
version = "0.3.1"
description = "Python client for the Ahrefs API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Gerwyn Ng", email = "gerwyn.ng@ahrefs.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["ahrefs", "seo", "api", "backlinks", "keywords"]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://ahrefs.com"
Repository = "https://github.com/ahrefs/ahrefs-python"
Documentation = "https://docs.ahrefs.com/docs/api/v3/"
Issues = "https://github.com/ahrefs/ahrefs-python/issues"
Changelog = "https://github.com/ahrefs/ahrefs-python/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
    "mdformat>=0.7",
    "mdformat-toc>=0.3",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ahrefs", from = "src" }]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/ahrefs/_generated_methods.py" = ["E501"]
"src/ahrefs/types/_generated.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires AHREFS_API_KEY and live API access",
]
asyncio_mode = "auto"
